# fastgs_core

./: .gitignore  CMakeLists.txt  FastGS_MLX_Translation_Plan.md  Makefile  Readme.md  Readme_zhtw.md  Task.md  pyproject.toml  setup.py
fastgs_core/: dummy.cpp  fastgs_binning.cpp  fastgs_preprocess.cpp  fastgs_preprocess_backward.cpp  fastgs_rasterize.cpp  fastgs_rasterize_backward.cpp  fastgs_tile_prep.cpp  helper.cpp
fastgs_core/binding/: binding.cpp
fastgs_core/include/: dummy.h  fastgs_binning.h  fastgs_preprocess.h  fastgs_rasterize.h  fastgs_tile_prep.h  helper.h
fastgs_core/metal/: dummy.metal  fastgs_binning.metal  fastgs_preprocess.metal  fastgs_preprocess_backward.metal  fastgs_rasterize.metal  fastgs_rasterize_backward.metal  fastgs_tile_prep.metal
fastgs_core/test/: test.cpp
python_package/fastgs_core/: __init__.py
scripts/: backward_grad_contract_smoke.py  backward_numeric_check.py  backward_parity_compare.py  backward_smoke.py  backward_vjp_smoke.py  binning_smoke.py  dummy.py  e2e_backward_smoke.py  mlx_cxx_primitive_generate.py  mx_array_bridge_smoke.py  preprocess_backward_validation.py  preprocess_smoke.py  rasterize_backward_validation.py  rasterize_gaussians_smoke.py  rasterize_smoke.py  render_2048_cube_smoke.py  render_2048_smoke.py  test_gaussian_render.py  test_spz_export.py  tile_prep_smoke.py  train_scanner_fastgs.py  train_scanner_fixed.py  train_square.py
